@@ -195,11 +195,6 @@
     </li>
 
     <li>
-      <p><a href="libtao-doc/pss/index.html">TAO_PSS:</a> TAO's Persistent
-      State Service implementation.</p>
-    </li>
-
-    <li>
       <p><a href="libtao-doc/ifr/index.html">TAO_IFR:</a> TAO's Interface
       Repository Service implementation.</p>
     </li>
